# backend/internal/user/model.go
@@ -3,6 +3,8 @@ package user
 import (
 	"time"
 
+	"api-on/internal/shared/permissions"
+
 	"github.com/google/uuid"
 )
 
@@ -18,14 +20,15 @@ const (
 )
 
 type User struct {
-	ID           uuid.UUID  `json:"user_id"`
-	TenantID     uuid.UUID  `json:"tenant_id"`
-	Name         string     `json:"name"`
-	Email        string     `json:"email"`
-	PasswordHash string     `json:"-"`
-	Role         string     `json:"role"`
-	Status       string     `json:"status"`
-	LastLoginAt  *time.Time `json:"last_login_at,omitempty"`
-	CreatedAt    time.Time  `json:"created_at"`
-	UpdatedAt    time.Time  `json:"updated_at"`
+	ID           uuid.UUID                      `json:"user_id"`
+	TenantID     uuid.UUID                      `json:"tenant_id"`
+	Name         string                         `json:"name"`
+	Email        string                         `json:"email"`
+	PasswordHash string                         `json:"-"`
+	Role         string                         `json:"role"`
+	Status       string                         `json:"status"`
+	Permissions  permissions.AccountPermissions `json:"permissions"`
+	LastLoginAt  *time.Time                     `json:"last_login_at,omitempty"`
+	CreatedAt    time.Time                      `json:"created_at"`
+	UpdatedAt    time.Time                      `json:"updated_at"`
 }
